<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoosokanVS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="login_selleremail">Email:</string>
    <string name="login_username_hint">Type in Username…</string>
    <string name="login_password">Password:</string>
    <string name="login_label_signin">Sign In</string>
    <string name="signup_label">Sign Up</string>
    <string name="login_register_link">Do not have account? Please sign up first!</string>
    <string name="home_search_hint">Please enter keyword…</string>
    
 
    <string name="lg_psw">Remember Password</string>
    <string name="lg_autolog">Auto LogIn</string>
    
    <string name="soosokan">Soosokan</string>
    <string name="desc">Photo</string>
    <string name="account">My Account</string>
    <string name="address">Address</string>
     <string name="addItem">Add!</string>
    
    <string name="txt_save">TakePicture</string>
    
    <string name="Manage_item_button">Manage your items</string>
    <string name="Manage_ads_button">Manage your advertisements</string>
    <string name="Manage_account_button">Manage your account</string>
    
    <string name="seller_name">Seller Name:</string>
    <string name="item_keyword">Item Keyword:</string>
    <string name="item_price">Item Price:</string>
    <string name ="percentage">%</string>
    
     <string name ="menuAdAdd">Add new Ads</string>
    
    
    
    
    <string name="ads_add_btn">Add a new Advertisement</string>
    <string name="modifybtn" >Modify</string>
    
    <string name="item_add_btn">Add New Item</string>
    <string name="item_mod_btn">Modify Item Info</string>
    
    <string-array name="range">
	    <item>1000M</item>
	    <item>2000M</item>
	    <item>3000M</item>
	</string-array>
    
    
    
    
    

</resources>