<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <RelativeLayout 
  	    android:id="@+id/login_div"
  	    android:layout_width="fill_parent"
  		android:layout_height="400dip"
  		android:padding="15dip"        
    	android:layout_margin="15dip" 
    	android:background="@drawable/background_login_div_bg" >

        <!-- 账号 -->


        <!-- 密码 text -->


        <!-- 登录button -->

        <TextView
            android:id="@+id/login_seller_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/login_selleremail"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/selleremail_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_seller_input"
            android:layout_below="@+id/login_seller_input"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true"
            tools:ignore="RtlHardcoded" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/selleremail_editText"
            android:layout_below="@+id/selleremail_editText"
            android:text="@string/login_password"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/Password_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_input"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword"
            android:singleLine="true"
            
            />

        <Button
            android:id="@+id/Sign_in_button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/Password_editText"
            android:background="@drawable/blue_button"
            android:text="@string/login_label_signin"
            tools:ignore="RtlHardcoded" 
            android:onClick="postData"/>

        <CheckBox
            android:id="@+id/lgcb_repass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Password_editText"
            android:layout_below="@+id/Password_editText"
            android:layout_marginTop="17dp"
            android:text="@string/lg_psw"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/lgcb_autolog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lgcb_repass"
            android:layout_alignLeft="@+id/lgcb_repass"
            android:layout_marginTop="40dp"
            android:text="@string/lg_autolog"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_register_link"
            android:textColor="#FF6347"
            android:textColorLink="#FF0066CC"
            tools:ignore="RtlHardcoded" />

        <!-- <ImageView android:src="@drawable/logo" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_toLeftOf="@id/miniTwitter_logo" -->
        <!-- android:layout_alignBottom="@id/miniTwitter_logo" -->
        <!-- android:paddingBottom="8dp"/> -->

        <Button
            android:id="@+id/Register_button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/register_link"
            android:layout_below="@+id/register_link"
            android:layout_marginTop="14dp"
            android:background="@drawable/blue_button"
            android:text="@string/signup_label"
            tools:ignore="RtlHardcoded" 
            android:onClick="register"/>
    </RelativeLayout>

</LinearLayout>